--- a/settings/main_config.ini
+++ b/settings/main_config.ini
@@ -25,7 +25,7 @@ ChapterGrindMode3=Loss Farm
 ChapterMaxSpeed1=2
 ChapterMaxSpeed2=2
 ChapterMaxSpeed3=2
-ChapterMaxTime1=9999
+ChapterMaxTime1=10
 ChapterMaxTime2=15
 ChapterMaxTime3=15
 ChapterName1=Endless Shield
@@ -46,34 +46,34 @@ ChapterStratInvertLR3=0
 ChapterUnitMode1=Input
 ChapterUnitMode2=Input
 ChapterUnitMode3=Input
-ChapterUnitSlot01=
+ChapterUnitSlot01=None
 ChapterUnitSlot02=None
 ChapterUnitSlot03=None
-ChapterUnitSlot11=
+ChapterUnitSlot11=Cameraman
 ChapterUnitSlot12=Cameraman
 ChapterUnitSlot13=Cameraman
-ChapterUnitSlot21=
+ChapterUnitSlot21=None
 ChapterUnitSlot22=Speakerman
 ChapterUnitSlot23=Speakerman
-ChapterUnitSlot31=
+ChapterUnitSlot31=None
 ChapterUnitSlot32=TV Man
 ChapterUnitSlot33=TV Man
-ChapterUnitSlot41=
+ChapterUnitSlot41=None
 ChapterUnitSlot42=None
 ChapterUnitSlot43=None
-ChapterUnitSlot51=
+ChapterUnitSlot51=None
 ChapterUnitSlot52=None
 ChapterUnitSlot53=None
-ChapterUnitSlot61=
+ChapterUnitSlot61=None
 ChapterUnitSlot62=None
 ChapterUnitSlot63=None
-ChapterUnitSlot71=
+ChapterUnitSlot71=None
 ChapterUnitSlot72=None
 ChapterUnitSlot73=None
-ChapterUnitSlot81=
+ChapterUnitSlot81=None
 ChapterUnitSlot82=None
 ChapterUnitSlot83=None
-ChapterUnitSlot91=
+ChapterUnitSlot91=None
 ChapterUnitSlot92=None
 ChapterUnitSlot93=None
 ChapterUnitSlots1=10
@@ -107,8 +107,8 @@ FallbackServer2=
 FallbackServer3=
 GUITheme=None
 GUITransparency=5
-GUI_X=1196
-GUI_Y=635
+GUI_X=1005
+GUI_Y=392
 IgnoredUpdateVersion=0.4.3
 KeyDelay=25
 Language=english
@@ -129,13 +129,13 @@ SessionDisconnects=0
 SessionLosses=0
 SessionPausedTime=0
 SessionPlaytime=0
-SessionRuntime=11
+SessionRuntime=0
 SessionWins=0
 TotalCredits=11,404
 TotalDisconnects=1
 TotalLosses=0
 TotalPausedTime=1259
 TotalPlaytime=869
-TotalRuntime=33149
+TotalRuntime=33159
 TotalWins=0
 
